--- a/genie/web/templates/web/eventManagement.html
+++ b/genie/web/templates/web/eventManagement.html
@@ -87,6 +87,24 @@
 										<input type="text" name="longitude" id="longitude" value="" placeholder="Longitude" />
 									</div>
 									<div class="col-12">
+										<input class="button" value="Calculate GPS Coordinates" id="latLngButton"/>
+										<script>
+											document.getElementById("latLngButton").addEventListener("click", () => {
+												address = document.getElementById("address").value;
+												url = "https://maps.googleapis.com/maps/api/geocode/json?key=AIzaSyDBdkOXzfc2rj7a57BnP3AI0r9TrT2nmxY&address=" + address;
+												fetch(url)
+													.then(response => response.json())
+													.then(data => {
+														document.getElementById("address").value = data["results"][0]["formatted_address"];
+														geocode = data["results"][0]["geometry"]["location"];
+														document.getElementById("latitude").value = geocode["lat"];
+														document.getElementById("longitude").value = geocode["lng"];
+													});
+											});
+										</script>
+									</div>
+
+									<div class="col-12">
 										<ul class="actions">
 											<li><input type="submit" value="Create Event" /></li>
 										</ul>
