--- a/genie/web/templates/web/account.html
+++ b/genie/web/templates/web/account.html
@@ -73,7 +73,6 @@
 								<div class="row gtr-50 gtr-uniform">
 									<br />
 									<div class="col-12 col-12-mobilep">
-										<!--TODO: add user balance-->
 										<h4>Current Balance: ${{balance}}0</h4>
 									</div>
 									<form method="post" action={% url 'web:balance' %}>
@@ -88,6 +87,12 @@
 										</div>
 									</form>
 								</div>
+								{% if user.profile.is_owner %}
+								<h3>Revenue</h3>
+								<div class="col-12 col-12-mobilep">
+									<h4>Current Revenue: $00.00</h4>
+								</div>
+								{% endif %}
 							</section>
 						</div>
 						<div class="features-row">
