--- a/genie/web/templates/web/reserveSpot.html
+++ b/genie/web/templates/web/reserveSpot.html
@@ -53,94 +53,208 @@
 
 												<select onchange="eventChange()" name="eventCategory" id="eventCategory">
 														<option value="">- Select Event -</option>
-
-														{% for event in events %}
+														{% if preFilledLotId %}
+															{% for event in preFilledLot.event.all %}
+																<option value={{event.id}}>{{ event.name }} - {{event.description}}</option>
+															{% endfor %}
+														{% elif againLotId %}
+															{% for event in againLot.event.all %}
+																<option value={{event.id}}>{{ event.name }} - {{event.description}}</option>
+															{% endfor %}
+														{% else %}
+															{% for event in events %}
 															<option value={{event.id}}>{{ event.name }} - {{event.description}}</option>
-														{% endfor %}
+															{% endfor %}
+														{% endif %}
 												</select>
 											</div>
-											<div class="col-12">
-												<h5><a href={% url "web:defaultMap" %}>See map of available lots</a></h5>
+											<div class="col-12" id="eventMap">
+												<h5><a id="link">See map of available lots</a></h5>
 											</div>
-											<script>
-												var e = document.getElementById("eventCategory");
-												var event = e.value;
-												console.log(event);
-												var x = document.getElementById("lotDiv")
-											</script>
+											<div class="col-12" id="message">
+												<h5 id="newMessage" style="color: red;"></h5>
+											</div>
 											<div class="col-12" id="lotDiv">
-												<select name="lotCategory" id="lotCategory">
+												<select onchange="lotChange()" name="lotCategory" id="lotCategory">
 														{% if preFilledLotId %}
 															<option value="{{ preFilledLotId }}">{{ preFilledLotName }} (From previously viewed page)</option>
-															<option value="">- Select Lot -</option>
+															<!-- <option value="">- Select Lot -</option> -->
 
-															{% for lot in lots %}
+															<!-- {% for lot in lots %}
 																{% if lot.id != preFilledLotId %}
 																	<option value={{lot.id}}>{{ lot.name }} - {{lot.address}}</option>
 																{% endif %}
-															{% endfor %}
+															{% endfor %} -->
 
 														{% elif againLotId %}
 															<option value="{{ againLotId }}">{{ againLotName }} (From previous reservation)</option>
-															<option value="">- Select Lot -</option>
+															<!-- <option value="">- Select Lot -</option>
 
 															{% for lot in lots %}
 																{% if lot.id != againLotId %}
 																	<option value={{lot.id}}>{{ lot.name }} - {{lot.address}}</option>
 																{% endif %}
-															{% endfor %}
+															{% endfor %} -->
 
 														{% else %}
 															<option value="">- Select Lot -</option>
-
-															{% for lot in lots %}
-																<option value={{lot.id}}>{{ lot.name }} - {{lot.address}}</option>
-															{% endfor %}
+															<script>
+																function chooseLots() {
+																	var l = document.getElementById("lotCategory");
+																	var length = l.options.length - 1;
+																	for (var i = length; i >= 0; i--) {
+																		l.remove(i);
+																	}
+																	var opt = document.createElement('option');
+																	opt.append(document.createTextNode("- Select Lot -"));
+																	l.appendChild(opt);
+																	"{% for lot in lots %}"
+																	console.log(l);
+																	console.log("In choose lot");
+																		"{% for e in lot.event.all %}"
+																		var x = "{{e.id}}";
+																		console.log(x);
+																		if (x == event) {
+																			var option = document.createElement('option');
+																			option.value = "{{lot.id}}";
+																			option.append(document.createTextNode("{{lot.name}}" + " - " + "{{lot.address}}"));
+																			l.appendChild(option);
+																		}
+																		"{% endfor %}"
+																	"{% endfor %}"
+																}
+															</script>
 
 														{% endif %}
 												</select>
 											</div>
 											<script>
-												var lotDiv = document.getElementById("lotDiv");
-												if (event === "") {
-													lotDiv.style.display = "none";
-												}
-												else {
-													lotDiv.sytle.display = "block";
-												}
-											function eventChange() {
 												var e = document.getElementById("eventCategory");
 												var event = e.value;
-												console.log(event);
-												if (event === "") {
+												var lotDiv = document.getElementById("lotDiv");
+												var eventMap = document.getElementById("eventMap");
+												if (event === "" && "{{againLotId}}" === "" && "{{preFilledLotId}}" === "") {
+													console.log("No lot");
 													lotDiv.style.display = "none";
+													eventMap.style.display = "none";
 												}
 												else {
 													lotDiv.style.display = "block";
+													if (event === "") {
+														eventMap.style.display = "none";
+													}
+													else
+														eventMap.style.display = "block";
+												}
+											function eventChange() {
+												event = e.value;
+												if (event === "") {
+													lotDiv.style.display = "none";
+													eventMap.style.display = "none";												}
+												else {
+													if ("{{preFilledLotId}}" === "" && "{{againSpotId}}" === "") {
+														chooseLots();
+														lotDiv.style.display = "block";
+														eventMap.style.display = "block";
+														var a = document.getElementById("link");
+														var url = "{% url 'web:map' 1 %}";
+														a.href = url.replace('1', event);
+													}
+													else if ("{{againSpotId}}" != "") {
+														var count = 0;
+														"{% for r in reservations %}"
+															if ("{{r.event.id}}" == event) {
+																if ("{{r.spot}}" == "{{againSpot}}")
+																	count += 1;
+															}
+														"{% endfor %}"
+														if (count > "{{againSpot.totalSpots}}") {
+															var m = document.getElementById("message");
+															m.textContent("This event does not have any of the selected spot available")
+														}
+
+													}
 												}
 											}
 											</script>
-											<div class="col-12">
-												<select name="spotCategory" id="spotCategory">
+											<script>
+												var l = document.getElementById("lotCategory");
+												var lot = l.value;
+											</script>
+											<div class="col-12" id="spotDiv">
+												<select  name="spotCategory" id="spotCategory">
 													{% if againSpotId %}
 														<option value="{{ againSpotId }}">{{ againSpotType }} (From previous reservation)</option>
-														<option value="">- Select Parking Type -</option>
+														<!-- <option value="">- Select Parking Type -</option>
 
 														{% for spot in spots %}
 															{% if spot.id != againSpotId %}
 																<option value={{spot.id}}>{{ spot.spotType }} @ {{ spot.lot.name }}</option>
 															{% endif %}
-														{% endfor %}
+														{% endfor %} -->
 													{% else %}
 														<option value="">- Select Parking Type -</option>
-
-														{% for spot in spots %}
-															<option value={{spot.id}}>{{ spot.spotType }} @ {{ spot.lot.name }}</option>
-														{% endfor %}
-
+														<script>
+														function chooseSpots() {
+															var s = document.getElementById("spotCategory");
+															var length = s.options.length - 1;
+															for (var i = length; i >= 0; i--) {
+																s.remove(i);
+															}
+															var opt = document.createElement('option');
+															opt.append(document.createTextNode("- Select Parking Type -"));
+															s.appendChild(opt);
+															"{% for spot in spots %}"
+															console.log(s);
+															console.log("In choose spot");
+															var x = "{{spot.lot.id}}";
+															console.log(x);
+															
+															if (x == lot) {
+																var count = 0;
+																"{% for r in reservations %}"
+																if ("{{r.event.id}}" == event) {
+																	if ("{{r.spot}}" == "{{spot}}")
+																		count += 1;
+																}
+																"{% endfor %}"
+																if (count < "{{spot.totalSpots}}") {
+																	var option = document.createElement('option');
+																	option.value = "{{spot.id}}";
+																	option.append(document.createTextNode("{{spot.spotType}}" + " @ " + "{{spot.lot.name}}"));
+																	s.appendChild(option);
+																}
+															}
+															"{% endfor %}"
+														}
+														</script>
+															<!--<option value={{spot.id}}>{{ spot.spotType }} @ {{ spot.lot.name }}</option>-->
 													{% endif %}
 												</select>
 											</div>
+											<script>
+												var spotDiv = document.getElementById("spotDiv");
+												if ((lot === "" || "{{preFilledLotId}}" === "") && "{{againSpotId}}" === "") {
+													spotDiv.style.display = "none";
+												}
+												else {
+													if ("{{preFilledLotId}}" != "")
+														lot = "{{preFilledLotId}}"
+														chooseSpots();
+													spotDiv.style.display = "block";
+												}
+											function lotChange() {
+												lot = l.value;
+												chooseSpots();
+												console.log(lot);
+												if (lot === "") {
+													spotDiv.style.display = "none";
+												}
+												else {
+													spotDiv.style.display = "block";
+												}
+											}
+											</script>
 											<div class="col-3 col-12">
 												<input type="submit" value="Select" class="fit" />
 											</div>
