--- a/genie/web/templates/web/map.html
+++ b/genie/web/templates/web/map.html
@@ -33,9 +33,9 @@
 					<h1>Big Blue's Parking Genie</h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="{% url 'web:signUp' %}">Home</a></li>
-							<li><a href="account.html" class="button">My Account</a></li>
-							<li><a href="signUp.html" class="button">Log Out</a></li>
+							<li><a href="{% url 'web:main' %}">Home</a></li>
+							<li><a href="{% url 'web:account' %}" class="button">My Account</a></li>
+							<li><a href="{% url 'web:logout' %}" class="button">Log Out</a></li>
 						</ul>
 					</nav>
 				</header>
