--- a/genie/web/templates/web/lotManagement.html
+++ b/genie/web/templates/web/lotManagement.html
@@ -122,7 +122,7 @@
 						</div>
 						<div class="row gtr-50 gtr-uniform aln-center">
 							<div class="col-4 col-12-mobilep">
-								<a href="{% url 'web:home' %}" class="button">Edit Lot (Doesn't work)</a>
+								<a href="{% url 'web:lotEdit' parkingLot.0.id %}" class="button">Edit Lot</a>
 							</div>
 						</div>
 					</section>
