--- a/genie/web/templates/web/lotEdit.html
+++ b/genie/web/templates/web/lotEdit.html
@@ -40,17 +40,73 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Lot Management Page for Owners</h2>
-						<!-- 
-							1. View all parking spots
-							2. Edit all parking spots
-							3. Add parking spots??
-							4. View map
-								- Additional features?
-									- Attendants
-								- Change location?
-						-->
+						<h2>{{ parkingLot.name }}</h2>
 					</header>
+
+					<section class="box">
+						<h4><strong>Name: </strong>{{ parkingLot.name }}</h4>
+						<h4><strong>Address: </strong>{{ parkingLot.address }}</h4>
+						<h4><strong>Upcoming Events: </strong>
+							{% if event_list %}
+								{% for event in event_list %}
+									{% if forloop.last %}
+										{{ event }}
+									{% else %}
+										{{ event }},
+									{% endif %}
+								{% endfor %}
+							{% else %}
+								No events
+							{% endif %}
+						</h4>
+						<h4><strong>Attendants (usernames):</strong>
+							{% if attendant_list %}
+								{% for attendant in attendant_list %}
+									{% if forloop.last %}
+										{{ attendant }}
+									{% else %}
+										{{ attendant }},
+									{% endif %}
+								{% endfor %}
+							{% else %}
+								No Attendants yet
+							{% endif %}
+						</h4>
+
+						<h4><strong>Total Parking Spots: </strong>{{ total_spots }}</h4>
+
+						<div class="table-wrapper">
+							<table style="text-align: left;">
+								<thead>
+									<tr>
+										<th><strong>Spot Type</strong></th>
+										<th><strong>Quantity</strong></th>
+										<th><strong>Price</strong></th>
+									</tr>
+								</thead>
+
+								<tbody>
+									{% if spot_list %}
+										{% for spot in spot_list %}
+										<tr>
+											<td>{{ spot.spotType }}</td>
+											<td>{{ spot.totalSpots }}</td>
+											<td>${{ spot.price|stringformat:".2f" }}</td>
+										</tr>
+										{% endfor %}
+									{% else %}
+										<tr>
+											<td>No spots available</td>
+											<td></td>
+											<td></td>
+										</tr>
+									{% endif %}
+								</tbody>
+
+							</table>
+						</div>
+					</section>
+
 					<section class="box">
 						<h4 class="special" style="text-align: center;">Total Parking Spots: #</h4>
 						<div class="table-wrapper">
