--- a/genie/web/templates/web/main.html
+++ b/genie/web/templates/web/main.html
@@ -129,6 +129,7 @@
 											<p class="col-3"><a data-code="{{ reservation.uuid }}" class="code">Reservation Code</a></p>
 											<form class="col-3" action="{% url 'web:lot-info' %}" method="post">
 												{% csrf_token %}
+												<input type="hidden" value="{{ reservation.event.id }}" name="passEvent" class="button special"/>
 												<input type="hidden" value="{{ reservation.spot.lot.id }}" id="whichCurrentLot" name="whichCurrentLot" class="button special"/>
 												<input class="button" type="submit" value="See Lot Map and Details"/>
 											</form>
