Added revenue logic

--- a/genie/web/templates/web/account.html
+++ b/genie/web/templates/web/account.html
@@ -90,7 +90,7 @@
 								{% if user.profile.is_owner %}
 								<h3>Revenue</h3>
 								<div class="col-12 col-12-mobilep">
-									<h4>Current Revenue: $00.00</h4>
+									<h4>Current Revenue: ${{revenue}}0</h4>
 								</div>
 								{% endif %}
 							</section>
