Lot Address changes

--- a/genie/web/static/web/assets/css/main.css
+++ b/genie/web/static/web/assets/css/main.css
@@ -111,6 +111,12 @@
 	    content: "\2796";
 	}
 
+    /* Lot Edit page */
+
+    .error {
+        color: #FF0000;
+    }
+
 /* Basic */
 
 	@-ms-viewport {
