--- a/genie/web/templates/web/lotEdit.html
+++ b/genie/web/templates/web/lotEdit.html
@@ -45,7 +45,7 @@
 
 					<section class="box">
 						<p><strong>Name: </strong>{{ parkingLot.name }}</p>
-						<form action="{% url 'web:change_name' parkingLot.id %}" method="post">
+						<form action="{% url 'web:lot_change_name' parkingLot.id %}" method="post">
 							{% csrf_token %}
 							<input type="text" placeholder="Enter New Parking Lot Name" name="name" id="name">
 							<br>
@@ -59,7 +59,7 @@
 
 					<section class="box">
 						<p><strong>Address: </strong>{{ parkingLot.address }}</p>
-						<form action="{% url 'web:change_address' parkingLot.id %}" method="post">
+						<form action="{% url 'web:lot_change_address' parkingLot.id %}" method="post">
 							{% csrf_token %}
 							<input type="text" placeholder="Enter New Parking Lot Address" name="address" id="address">
 							<br>
@@ -121,7 +121,7 @@
 							<div class="col-4">
 								<button class="collapsible button fit">Add Events</button>
 									<div class="content">
-										<form method="post">
+										<form action="{% url 'web:lot_add_events' parkingLot.id %}" method="post">
 											{% csrf_token %}
 											{% if other_event_list %}
 												{% for other_event in other_event_list %}
@@ -138,7 +138,7 @@
 							<div class="col-4">
 								<button class="collapsible button fit">Delete Events</button>
 									<div class="content">
-										<form method="post">
+										<form action="{% url 'web:lot_delete_events' parkingLot.id %}" method="post">
 											{% csrf_token %}
 											{% if event_list %}
 												{% for event in event_list %}
